--- a/radar/pom.xml
+++ b/radar/pom.xml
@@ -10,7 +10,7 @@
         <groupId>com.gwenneg</groupId>
         <artifactId>flight-tracker-demo-parent</artifactId>
         <version>1.0.0-SNAPSHOT</version>
-        <relativePath>../../pom.xml</relativePath>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <dependencies>
