--- a/transponder/pom.xml
+++ b/transponder/pom.xml
@@ -4,13 +4,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>flight-tracker-adsb-source</artifactId>
+    <artifactId>flight-tracker-transponder-source</artifactId>
 
     <parent>
         <groupId>com.gwenneg</groupId>
         <artifactId>flight-tracker-demo-parent</artifactId>
         <version>1.0.0-SNAPSHOT</version>
-        <relativePath>../../pom.xml</relativePath>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <dependencies>
