--- a/map-service/pom.xml
+++ b/map-service/pom.xml
@@ -8,7 +8,7 @@
 
     <parent>
         <groupId>com.gwenneg</groupId>
-        <artifactId>flight-tracker-demo-parent</artifactId>
+        <artifactId>flight-tracker-demo</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
