--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.gwenneg</groupId>
-  <artifactId>flight-tracker-demo-parent</artifactId>
+  <artifactId>flight-tracker-demo</artifactId>
   <version>1.0.0-SNAPSHOT</version>
   <packaging>pom</packaging>
   <modules>
