--- a/aggregator/src/main/resources/application.properties
+++ b/aggregator/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 quarkus.kafka-streams.application-id=flight-tracker
-quarkus.kafka-streams.topics=ads-b,radar
+quarkus.kafka-streams.topics=radar,transponder
 
 #kafka-streams.consumer.session.timeout.ms=250
 kafka-streams.consumer.heartbeat.interval.ms=200
