--- a/map-service/src/main/resources/application.properties
+++ b/map-service/src/main/resources/application.properties
@@ -9,7 +9,7 @@ quarkus.hibernate-orm.sql-load-script=data.sql
 quarkus.hibernate-orm.log.sql=false
 
 mp.messaging.incoming.aircraft-positions.connector=smallrye-kafka
-mp.messaging.incoming.aircraft-positions.topic=temperatures-aggregated
+mp.messaging.incoming.aircraft-positions.topic=flight-data
 mp.messaging.incoming.aircraft-positions.key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 mp.messaging.incoming.aircraft-positions.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 
