--- a/transponder/src/main/resources/application.properties
+++ b/transponder/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 quarkus.http.port=8080
 
 mp.messaging.outgoing.ads-b.connector=smallrye-kafka
-mp.messaging.outgoing.ads-b.topic=transponder
+mp.messaging.outgoing.ads-b.topic=transponder-data
 mp.messaging.outgoing.ads-b.key.serializer=org.apache.kafka.common.serialization.StringSerializer
 mp.messaging.outgoing.ads-b.value.serializer=org.apache.kafka.common.serialization.StringSerializer
