--- a/aggregator/src/main/resources/application.properties
+++ b/aggregator/src/main/resources/application.properties
@@ -1,9 +1,7 @@
-quarkus.kafka-streams.application-id=flight-tracker
+quarkus.kafka-streams.application-id=flight-tracker-demo
 quarkus.kafka-streams.topics=radar-data,transponder-data
 
-#kafka-streams.consumer.session.timeout.ms=250
-kafka-streams.consumer.heartbeat.interval.ms=200
-
+# From https://quarkus.io/guides/kafka-streams
 kafka-streams.cache.max.bytes.buffering=10240
 kafka-streams.commit.interval.ms=1000
 kafka-streams.metadata.max.age.ms=500
