--- a/transponder/src/main/resources/application.properties
+++ b/transponder/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-quarkus.http.port=8080
+quarkus.http.port=8082
 
-mp.messaging.outgoing.ads-b.connector=smallrye-kafka
-mp.messaging.outgoing.ads-b.topic=transponder-data
-mp.messaging.outgoing.ads-b.key.serializer=org.apache.kafka.common.serialization.StringSerializer
-mp.messaging.outgoing.ads-b.value.serializer=org.apache.kafka.common.serialization.StringSerializer
+mp.messaging.outgoing.transponder-data.connector=smallrye-kafka
+mp.messaging.outgoing.transponder-data.topic=transponder-data
+mp.messaging.outgoing.transponder-data.key.serializer=org.apache.kafka.common.serialization.StringSerializer
+mp.messaging.outgoing.transponder-data.value.serializer=org.apache.kafka.common.serialization.StringSerializer
