--- a/radar/src/main/resources/application.properties
+++ b/radar/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-quarkus.http.port=8082
+quarkus.http.port=8081
 
-mp.messaging.outgoing.radar.connector=smallrye-kafka
-mp.messaging.outgoing.radar.topic=radar-data
-mp.messaging.outgoing.radar.key.serializer=org.apache.kafka.common.serialization.StringSerializer
-mp.messaging.outgoing.radar.value.serializer=org.apache.kafka.common.serialization.StringSerializer
+mp.messaging.outgoing.radar-data.connector=smallrye-kafka
+mp.messaging.outgoing.radar-data.topic=radar-data
+mp.messaging.outgoing.radar-data.key.serializer=org.apache.kafka.common.serialization.StringSerializer
+mp.messaging.outgoing.radar-data.value.serializer=org.apache.kafka.common.serialization.StringSerializer
