--- a/map-service/src/main/resources/application.properties
+++ b/map-service/src/main/resources/application.properties
@@ -8,10 +8,10 @@ quarkus.hibernate-orm.database.generation = drop-and-create
 quarkus.hibernate-orm.sql-load-script=data.sql
 quarkus.hibernate-orm.log.sql=false
 
-mp.messaging.incoming.aircraft-positions.connector=smallrye-kafka
-mp.messaging.incoming.aircraft-positions.topic=flight-data
-mp.messaging.incoming.aircraft-positions.key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
-mp.messaging.incoming.aircraft-positions.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+mp.messaging.incoming.flight-data.connector=smallrye-kafka
+mp.messaging.incoming.flight-data.topic=flight-data
+mp.messaging.incoming.flight-data.key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+mp.messaging.incoming.flight-data.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 
 quarkus.rest-client.radar.url=http://localhost:8081
 quarkus.rest-client.ads-b.url=http://localhost:8082
