--- a/map-service/src/main/resources/application.properties
+++ b/map-service/src/main/resources/application.properties
@@ -13,6 +13,4 @@ mp.messaging.incoming.flight-data.topic=flight-data
 mp.messaging.incoming.flight-data.key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 mp.messaging.incoming.flight-data.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 
-quarkus.rest-client.radar.url=http://localhost:8081
-quarkus.rest-client.ads-b.url=http://localhost:8082
-
+quarkus.rest-client.data-simulator.url=http://localhost:8081
