--- a/data-simulator/src/main/resources/application.properties
+++ b/data-simulator/src/main/resources/application.properties
@@ -1,4 +1,9 @@
-quarkus.http.port=8082
+quarkus.http.port=8081
+
+mp.messaging.outgoing.radar-data.connector=smallrye-kafka
+mp.messaging.outgoing.radar-data.topic=radar-data
+mp.messaging.outgoing.radar-data.key.serializer=org.apache.kafka.common.serialization.StringSerializer
+mp.messaging.outgoing.radar-data.value.serializer=org.apache.kafka.common.serialization.StringSerializer
 
 mp.messaging.outgoing.transponder-data.connector=smallrye-kafka
 mp.messaging.outgoing.transponder-data.topic=transponder-data
