--- a/pom.xml
+++ b/pom.xml
@@ -7,11 +7,10 @@
   <version>1.0.0-SNAPSHOT</version>
   <packaging>pom</packaging>
   <modules>
-    <module>aggregator</module>
     <module>common</module>
+    <module>data-aggregator</module>
+    <module>data-simulator</module>
     <module>map-service</module>
-    <module>radar</module>
-    <module>transponder</module>
   </modules>
   <properties>
     <compiler-plugin.version>3.8.1</compiler-plugin.version>
