--- a/data-simulator/src/main/resources/application.properties
+++ b/data-simulator/src/main/resources/application.properties
@@ -1,4 +1,6 @@
-quarkus.http.port=8081
+quarkus.http.port=8091
+
+kafka.bootstrap.servers=localhost:9092
 
 mp.messaging.outgoing.radar-data.connector=smallrye-kafka
 mp.messaging.outgoing.radar-data.topic=radar-data
