--- a/data-aggregator/src/main/resources/application.properties
+++ b/data-aggregator/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+kafka.bootstrap.servers=localhost:9092
+
 quarkus.kafka-streams.application-id=flight-tracker-demo
 quarkus.kafka-streams.topics=radar-data,transponder-data
 
