--- a/map-service/src/main/resources/application.properties
+++ b/map-service/src/main/resources/application.properties
@@ -1,16 +1,18 @@
-quarkus.http.port=8080
+quarkus.http.port=8090
 
 quarkus.datasource.db-kind=postgresql
-quarkus.datasource.username=postgres
-quarkus.datasource.password=postgres
+quarkus.datasource.username=flighttracker
+quarkus.datasource.password=flighttracker
 
-quarkus.hibernate-orm.database.generation = drop-and-create
+quarkus.hibernate-orm.database.generation=drop-and-create
 quarkus.hibernate-orm.sql-load-script=data.sql
 quarkus.hibernate-orm.log.sql=false
+
+kafka.bootstrap.servers=localhost:9092
 
 mp.messaging.incoming.flight-data.connector=smallrye-kafka
 mp.messaging.incoming.flight-data.topic=flight-data
 mp.messaging.incoming.flight-data.key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 mp.messaging.incoming.flight-data.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 
-quarkus.rest-client.data-simulator.url=http://localhost:8081
+quarkus.rest-client.data-simulator.url=http://localhost:8091
