Connect to RHOSAK from OpenShift

--- a/data-aggregator/pom.xml
+++ b/data-aggregator/pom.xml
@@ -14,6 +14,10 @@
             <artifactId>quarkus-kafka-streams</artifactId>
         </dependency>
         <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-openshift</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.gwenneg</groupId>
             <artifactId>flight-tracker-common</artifactId>
             <version>${project.version}</version>
