--- a/data-aggregator/src/main/resources/application.properties
+++ b/data-aggregator/src/main/resources/application.properties
@@ -1,6 +1,5 @@
 kafka.bootstrap.servers=localhost:9092
 
-quarkus.kafka-streams.application-id=flight-tracker-demo
 quarkus.kafka-streams.topics=radar-data,transponder-data
 
 # From https://quarkus.io/guides/kafka-streams
@@ -9,3 +8,9 @@ kafka-streams.commit.interval.ms=1000
 kafka-streams.metadata.max.age.ms=500
 kafka-streams.auto.offset.reset=earliest
 kafka-streams.metrics.recording.level=DEBUG
+
+%prod.kafka.security.protocol=SASL_SSL
+%prod.kafka.sasl.mechanism=PLAIN
+%prod.kafka.sasl.jaas.config=org.apache.kafka.common.security.plain.PlainLoginModule required username="${KAFKA_USERNAME}" password="${KAFKA_PASSWORD}";
+
+%prod.quarkus.openshift.env.secrets=kafka-credentials
