--- a/data-simulator/src/main/resources/application.properties
+++ b/data-simulator/src/main/resources/application.properties
@@ -11,3 +11,9 @@ mp.messaging.outgoing.transponder-data.connector=smallrye-kafka
 mp.messaging.outgoing.transponder-data.topic=transponder-data
 mp.messaging.outgoing.transponder-data.key.serializer=org.apache.kafka.common.serialization.StringSerializer
 mp.messaging.outgoing.transponder-data.value.serializer=org.apache.kafka.common.serialization.StringSerializer
+
+%prod.kafka.security.protocol=SASL_SSL
+%prod.kafka.sasl.mechanism=PLAIN
+%prod.kafka.sasl.jaas.config=org.apache.kafka.common.security.plain.PlainLoginModule required username="${KAFKA_USERNAME}" password="${KAFKA_PASSWORD}";
+
+%prod.quarkus.openshift.env.secrets=kafka-credentials
