--- a/map-service/pom.xml
+++ b/map-service/pom.xml
@@ -42,6 +42,10 @@
             <artifactId>quarkus-cache</artifactId>
         </dependency>
         <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-openshift</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.gwenneg</groupId>
             <artifactId>flight-tracker-common</artifactId>
             <version>${project.version}</version>
