--- a/map-service/src/main/resources/application.properties
+++ b/map-service/src/main/resources/application.properties
@@ -16,3 +16,10 @@ quarkus.datasource.password=flighttracker
 quarkus.hibernate-orm.database.generation=drop-and-create
 quarkus.hibernate-orm.sql-load-script=data.sql
 quarkus.hibernate-orm.log.sql=false
+
+%prod.kafka.security.protocol=SASL_SSL
+%prod.kafka.sasl.mechanism=PLAIN
+%prod.kafka.sasl.jaas.config=org.apache.kafka.common.security.plain.PlainLoginModule required username="${KAFKA_USERNAME}" password="${KAFKA_PASSWORD}";
+
+%prod.quarkus.openshift.env.secrets=kafka-credentials
+%prod.quarkus.openshift.route.expose=true
