Add rest-client prod URL

--- a/map-service/src/main/resources/application.properties
+++ b/map-service/src/main/resources/application.properties
@@ -8,6 +8,7 @@ mp.messaging.incoming.flight-data.key.deserializer=org.apache.kafka.common.seria
 mp.messaging.incoming.flight-data.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 
 quarkus.rest-client.data-simulator.url=http://localhost:8091
+%prod.quarkus.rest-client.data-simulator.url=http://flight-tracker-data-simulator
 
 quarkus.datasource.db-kind=postgresql
 quarkus.datasource.username=flighttracker
