Add OpenShift login properties

--- a/data-aggregator/src/main/resources/application.properties
+++ b/data-aggregator/src/main/resources/application.properties
@@ -14,3 +14,6 @@ kafka-streams.metrics.recording.level=DEBUG
 %prod.kafka.sasl.jaas.config=org.apache.kafka.common.security.plain.PlainLoginModule required username="${KAFKA_USERNAME}" password="${KAFKA_PASSWORD}";
 
 %prod.quarkus.openshift.env.secrets=kafka-credentials
+
+quarkus.kubernetes-client.master-url=${OC_URL:"REPLACE_ME"}
+quarkus.kubernetes-client.token=${OC_TOKEN:"REPLACE_ME"}
