--- a/map-service/src/main/resources/application.properties
+++ b/map-service/src/main/resources/application.properties
@@ -25,3 +25,6 @@ quarkus.hibernate-orm.log.sql=false
 
 %prod.quarkus.openshift.env.secrets=kafka-credentials
 %prod.quarkus.openshift.route.expose=true
+
+quarkus.kubernetes-client.master-url=${OC_URL:"REPLACE_ME"}
+quarkus.kubernetes-client.token=${OC_TOKEN:"REPLACE_ME"}
