--- a/map-service/src/main/resources/application.properties
+++ b/map-service/src/main/resources/application.properties
@@ -11,7 +11,7 @@ quarkus.rest-client.data-simulator.url=http://localhost:8091
 quarkus.datasource.db-kind=postgresql
 quarkus.datasource.username=flighttracker
 quarkus.datasource.password=flighttracker
-%prod.quarkus.datasource.reactive.url=postgres://postgres:5432/flighttracker
+%prod.quarkus.datasource.reactive.url=postgres://postgresql:5432/flighttracker
 
 quarkus.hibernate-orm.database.generation=drop-and-create
 quarkus.hibernate-orm.sql-load-script=data.sql
